style.css
body{
    display: grid;
	background-color: white;
	grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto auto auto repeat(2, 1fr);
}

.navbar-top{
    grid-column: 1 / 4;
    grid-row: 1;
    display: flex;
    background-color: white;
    flex-wrap: wrap;
    justify-content: flex-end;
    font-family: 'Open Sans', sans-serif;
    align-items: center;
    font-size: 13px;
    margin-right: 10px;
    
}

.navbar-top *{
    margin: 10px;
	color: black;
	text-decoration: none;
}

.loginbutton {
	font-weight: bold;
	display: inline-block;
	cursor: pointer;
	color: #ffffff;
	font-size: 13px;
	padding: 0px 12px;
	text-decoration: none;
	line-height: 28px;
	background: -moz-linear-gradient(top,#4387fd,#4683ea);
	border: 1px solid #4285f4;
	outline: none;
	border-radius: 2px;
}

.loginbutton:hover {
	background-color:#0688fa;

}
.loginbutton:active {
	position:relative;
	top:1px;
}

.logo { 
    grid-column: 1 / 4;
    grid-row: 2;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 109px;
}
.search {
	color: grey;
	grid-column: 2;
	grid-row: 3;
	display: flex;
	align-items: center;
	justify-content: center;
	margin-top: 47px;
	background-color: transparent;
	border: 1px solid #dfe1e5;
	box-shadow: none;
	border-radius: 24px;
	z-index: 3;
	height: 44px;
}

.search #icon1 {
	margin: auto 15px auto 15px;
}

.search #icon2 {
	margin: auto 15px auto 15px ;
}

.search:hover{
	box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
	border-color: rgba(223,225,229,0);
	
}
#searchform {
	height: 44px;
	flex-basis: 100%;
	background-color: transparent;
	border: none;
	padding: 0;
	color: rgba(0,0,0,.87);
	word-wrap: break-word;
	outline: none;
	
}

